# LightGBM-Cybersecurity

./: .gitignore  app.py  data_loader.py  detector.py  evaluator.py  preprocessor.py  pyproject.toml  requirements.txt  trainer.py
.github/workflows/: ci.yml  release-checks.yml
reports/benchmarks/: cpu_runtime.json  cpu_runtime.md  gpu_runtime.json  gpu_runtime.md
reports/external_validation/: summary.json
reports/gpu_diagnostics/: summary.json  summary.md
reports/gpu_smoke/: result.json
reports/history/: release_history.json  release_history.md
reports/model_search/: best_candidate.json  leaderboard.json  leaderboard.md
reports/model_search/baseline_prod/: external_report.json  validation_report.json
reports/model_search/rare_class_focus/: external_report.json  validation_report.json
reports/model_search/regularized_bagging/: external_report.json  validation_report.json
reports/model_search/shallow_regularized/: validation_report.json
reports/model_search/wider_trees/: external_report.json  (+1 more)
reports/rare_class_search/: best_candidate.json  leaderboard.json  leaderboard.md
reports/release/: summary.json  summary.md
reports/u2r_search/: best_candidate.json  leaderboard.json  leaderboard.md
src/ids_project/: __init__.py  artifacts.py  cli.py  config.py  contracts.py  evaluation.py  experiments.py  preprocessing.py  training.py
tests/: conftest.py  test_artifacts.py  test_cli.py  test_dataset.py  test_experiments.py  test_external_validation.py  test_preprocessing.py  test_profiles.py  test_runtime.py  test_runtime_metadata.py
(+21 files in other folders)
