[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ids-project"
version = "0.1.0"
description = "Multiclass intrusion detection pipeline built around NSL-KDD."
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.2",
    "tqdm>=4.67.1",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "imbalanced-learn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
]
lightgbm = [
    "lightgbm>=4.6.0",
]

[project.scripts]
ids-cli = "ids_project.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--basetemp=.pytest-tmp"]
markers = [
    "external: requires the local NSL-KDD external dataset and trained artifacts",
]
